# demultiplex

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Question.md
.github/workflows/: python-package.yml  release.yml  test.yml
data/: barcodes.tsv  demultiplex.fq  demultiplex.fq.bz2  demultiplex_x.fq  matchcodes.tsv
demultiplex/: __init__.py  cli.py  demultiplex.py  match.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  cli.rst  conf.py  credits.rst  faq.rst  index.rst  installation.rst  library.rst  requirements.txt  usage.rst
fastools/: __init__.py  demultiplex.py
tests/: shared.py  test_demultiplex.py
