[metadata]
name = demultiplex
version = 1.0.1
description = Demultiplex any number of FASTA or a FASTQ files based on a list of barcodes
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/jfjlaros/demultiplex
keywords = bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
copyright = 2013-2018

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    biopython
    dict-trie
    fastools
    jit-open

[options.entry_points]
console_scripts =
    demultiplex = demultiplex.cli:main
