[metadata]
name = demultiplex
version = 1.1.0
description = Demultiplex any number of FASTA or a FASTQ files based on a list of barcodes
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/jfjlaros/demultiplex
keywords = bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    biopython==1.72
    dict-trie==1.0.1
    jit-open==0.0.4
    tssv==1.0.5

[options.entry_points]
console_scripts =
    demultiplex = demultiplex.cli:main

[flake8]
per-file-ignores =
    demultiplex/__init__.py: F401
